--- a/package.json
+++ b/package.json
@@ -1,16 +1,48 @@
 {
   "name": "annoml",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "annoML - a vega-lite annotation and discussion tool",
+  "author": "Thomas Haefeker <thomas@haefeker.de>",
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 9090",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "demo": "vue-cli-service demo",
+    "docs": "npm run docs:serve",
+    "docs:build": "vue-cli-service docs --mode build",
+    "docs:serve": "vue-cli-service docs --mode serve",
+    "prepublish": "vue-cli-service lint && vue-cli-service docs --mode build && vue-cli-service build",
+    "start": "vue-cli-service serve"
   },
+  "main": "dist/annoml.common.js",
+  "module": "dist/annoml.esm.js",
+  "unpkg": "dist/annoml.umd.min.js",
+  "files": [
+    "dist/annoml.common.js",
+    "dist/annoml.umd.min.js",
+    "dist/annoml.umd.js",
+    "dist/annoml.esm.js",
+    "src"
+  ],
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "vuex": "^3.0.1",
     "vue": "^2.6.10",
-    "vuex": "^3.0.1"
+    "d3": "^5.9.2",
+    "d3-svg-annotation": "^2.5.0",
+    "file-saver": "^2.0.2",
+    "vega": "^5.3.5",
+    "lodash": "^4.17.11",
+    "tiptap": "^1.18.1",
+    "tiptap-extensions": "^1.18.1",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.22",
+    "font-awesome": "^4.7.0",
+    "vue-swatches": "^1.0.3",
+    "vega-embed": "^4.0.0",
+    "vega-lite": "^3.2.1",
+    "vega-view": "^5.2.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
@@ -21,7 +53,10 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "sass-loader": "^7.1.0",
+    "vue": "^2.6.10",
+    "vue-cli-plugin-p11n": "^0.3.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
@@ -46,5 +81,7 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "jsdelivr": "dist/annoml.umd.min.js",
+  "sideeffects": false
 }
