--- a/package.json
+++ b/package.json
@@ -26,23 +26,24 @@
   ],
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.22",
     "core-js": "^2.6.5",
-    "vuex": "^3.0.1",
-    "vue": "^2.6.10",
     "d3": "^5.9.2",
     "d3-svg-annotation": "^2.5.0",
     "file-saver": "^2.0.2",
-    "vega": "^5.3.5",
+    "font-awesome": "^4.7.0",
+    "jsum": "^0.1.4",
     "lodash": "^4.17.11",
     "tiptap": "^1.18.1",
     "tiptap-extensions": "^1.18.1",
-    "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.22",
-    "font-awesome": "^4.7.0",
-    "vue-swatches": "^1.0.3",
+    "vega": "^5.3.5",
     "vega-embed": "^4.0.0",
     "vega-lite": "^3.2.1",
-    "vega-view": "^5.2.1"
+    "vega-view": "^5.2.1",
+    "vue": "^2.6.10",
+    "vue-swatches": "^1.0.3",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
