--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "vega-view": "^5.2.1",
     "vue": "^2.6.10",
     "vue-swatches": "^1.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vue-router": "latest"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
